--- a/server/example.env
+++ b/server/example.env
@@ -1,8 +1,24 @@
 # Environment
+
+# Choose between 'production' and 'development'. Defaults to 'development' if not set.
 ENVIRONMENT=development
+# Defaults to 3000 if not set.
+PORT=3000
+# Override if needed, set automatically for local development and production.
+ORIGIN_URL=
 
 # Database
-DATABASE_PASSWORD=
+
+# Choose between 'mongodb' and 'cache'. Defaults to 'cache'.
 DATABASE_TYPE=cache
+# The following are not needed if using 'cache' as database type.
+DATABASE_PASSWORD=
 DATABASE_USER=
 DATABASE_URL=
+
+# Logs
+
+# The following will default to `false` if not set.
+DISABLE_DEBUG_LAYER=false
+DISABLE_WARNING_LAYER=false
+DISABLE_UPDATE_LAYER=false
