We can login now

--- a/server/example.env
+++ b/server/example.env
@@ -6,6 +6,8 @@ ENVIRONMENT=development
 PORT=3000
 # Override if needed, set automatically for local development and production.
 ORIGIN_URL=
+# Auth secret.
+SECRET=
 
 # Database
 
