--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@vercel/node": "^2.6.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
@@ -17,6 +18,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.2",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
