--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cd .. & vercel dev",
+    "test": "jest --colors",
+    "test:verbose": "jest --verbose --colors",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "author": "Andrew Young",
   "license": "ISC",
@@ -14,7 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.1",
+    "mongoose": "6.3.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "jest": "^29.2.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.8.4"
+    "typescript": "4.6.4",
+    "vercel": "^28.4.17"
   }
 }
